<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurapp</string>
    <string name="opiniones">Opiniones</string>
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="welcome">Bienvenido a Restaurapp</string>
    <string name="eleccion">Escoja una localización</string>

    <string name="sign_in_activate">Login</string>
    <string name="cancel">Cancelar</string>
    <string name="sign_up">Registrarse</string>

    <string name="barcelona">Barcelona</string>
    <string name="tarragona">Tarragona</string>
    <string name="lleida">Lleida</string>
    <string name="girona">Girona</string>


</resources>
